# devbind

./: README.md  pyproject.toml
src/devbind/: __init__.py  devbind.py
tests/: test_cli.py  test_freebsd.py  test_linux.py
tests/vm/: freebsd.sh  linux.sh  run.sh
