[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "devbind"
dynamic = ["version"]
description = "Inspect and control PCI device-driver binding on Linux and FreeBSD"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.10"
authors = [
    {name = "Simon A. F. Lund", email = "os@safl.dk"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX :: BSD :: FreeBSD",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Hardware",
]

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[project.scripts]
devbind = "devbind.devbind:main"

[project.urls]
Homepage = "https://github.com/xnvme/devbind"
Repository = "https://github.com/xnvme/devbind"
Issues = "https://github.com/xnvme/devbind/issues"

[tool.setuptools.dynamic]
version = {attr = "devbind.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 99
